# secure-gateway-rust

./: .gitignore  Cargo.toml  README.md
docs/: architecture.txt
examples/: simulation.rs  visual_demo.rs
src/: lib.rs  main.rs
src/config/: mod.rs
src/gateway/: mod.rs  router.rs  transformer.rs
src/protocols/: mod.rs
src/protocols/ethernet_ip/: mod.rs  parser.rs
src/protocols/mil_std_1553/: mod.rs  parser.rs
src/security/: crypto.rs  key_manager.rs  mod.rs
src/utils/: mod.rs
